--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
       content="width=device-width, initial-scale=1.0,viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Vite App</title>
+    <meta name="theme-color" content="#fff">
+    <script>
+      (function () {
+        const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
+        
+        const setting = localStorage.getItem('vueuse-color-scheme') || 'auto'
+        if (setting === 'dark' || (prefersDark && setting !== 'light'))
+          document.documentElement.classList.toggle('dark', true)
+      })()
+    </script>
   </head>
   <body>
     <div id="app"></div>
